--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,78 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  display: grid;
+  place-content: center;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-transform: capitalize;
+  background-color: rgba(196, 224, 236, 0.358);
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.main-heading {
+  letter-spacing: 0.2rem;
+  text-align: center;
+  margin: 2rem;
+  margin-bottom: 0.5rem;
+  font-size: 2rem;
+  color: rgb(11, 174, 238);
+}
+
+.underline {
+  margin: 0 auto 2rem;
+  width: 100px;
+  height: 5px;
+  background-color: rgb(11, 174, 238);
+  border-radius: 2px;
+}
+
+.container {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  width: 30%;
+  justify-content: center;
+  align-items: center;
+  margin: 2rem auto;
+  background-color: white;
+  border-radius: 8px;
+  box-shadow: 0.5 px 0.5px 0.5px black;
+}
+
+img {
+  width: 100px;
+  height: 100px;
+  margin: 1rem auto;
+  border-radius: 50%;
+}
+
+.left-btn,
+.right-btn,
+.surprise-btn {
+  margin: 0.5rem;
+  padding: 0.5rem 1rem;
+  background-color: rgba(5, 176, 244, 0.747);
+  border: 1px solid rgba(5, 176, 244, 0.747);
+  border-radius: 5px;
+  font-size: 1rem;
+  color: rgb(255, 255, 255);
+  box-shadow: 2px 3px 2px white;
+}
+
+.left-btn:hover,
+.right-btn:hover,
+.surprise-btn:hover {
+  opacity: 0.7;
 }
